--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,6 @@ description:           >
 # A shorter description for the sidebar.
 tagline:               >
   "Best Jekyll Theme by a Mile".
-  Open `_config.yml` to edit this text.
 
 # A list of keywords for your blog
 keywords:              []
@@ -43,14 +42,13 @@ logo:                  /assets/icons/icon.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  email:               <hpanw@foxmail.com>
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright:             >
   © 2018. All rights reserved.
-  Open `_config.yml` to edit this text.
 
 # Add links to the footer.
 # Typically you'll want to link to your impress, cookies or privacy policy, etc.
@@ -287,11 +285,11 @@ plugins:
 #   admins:              <id>
 
 # Used on index and about sites
-# social:
-#   name:                <firstname> <lastname>
-#   links:
-#     - https://twitter.com/<username>
-#     - https://github.com/<username>
+ social:
+   name:                <King> <knight>
+   links:
+     - https://weibo.com/hpanw
+     - https://github.com/knight-boy
 
 
 # Other Plugins
