--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              <Pang> <Gu>
+  email:             <hpanw@foxmail.com>
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -33,11 +33,11 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
-    # email:           <mail@domain.tld>
+    # twitter:         <username>
+    github:            <knight-boy>
+    email:             <hpanw@foxmail.com>
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook:          <boy knight>
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
