--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -36,8 +36,9 @@ author1:
     # twitter:         <username>
     github:            knight-boy
     email:             hpanw@foxmail.com
+    sina weibo:        hpanw
     # rss:             https://<url>/feed.xml
-    facebook:          boy knight
+    # facebook:          boy knight
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
