--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -36,7 +36,7 @@ author1:
     # twitter:         <username>
     github:            knight-boy
     email:             hpanw@foxmail.com
-    sina weibo:        hpanw
+    sina-weibo:        hpanw
     # rss:             https://<url>/feed.xml
     # facebook:          boy knight
     # google:          <number>
