--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ baseurl:               '/boy'
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Hydejack
+title:                 Home
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -29,7 +29,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  Best Jekyll Theme by a Mile.
+  My brother once told me that nothing someone says before the word 'but' really counts.
 
 # A list of keywords for your blog
 keywords:              []
