--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Config
+﻿# Config
 # ========================================================================================
 
 # IMPORTANT: Set the URL of your site.
@@ -19,7 +19,7 @@ baseurl:               '/boyjack'
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Home
+title:                 Blog
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
