--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,20 @@ google_analytics:      UA-130421911-1
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
-disqus:                hpanw
+disqus:                
+  enable: false
+  appid: 3o1jzA0gJVUlcoKEpLtLK3uE-gzGzoHsz
+  appkey: zPeaCmqF1O3KlX8k5gcMSDBw
+
+# valine
+#valine:
+#    enable: true
+#    appid: 
+ #   appkey: 
+ #   notify: false
+#    verify: false
+#    avatar: 'mm'
+#    placeholder: 'just go now!'
 
 # Setting a tinyletter username will enable the newsletter subscription box.
 # tinyletter:            <tinyletter_username>
